<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ItemFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"

        android:text="@string/id"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextID"
        app:layout_constraintEnd_toStartOf="@+id/editTextID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/editTextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/fonSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/sku"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toStartOf="@+id/editTextSku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextID" />

    <EditText
        android:id="@+id/editTextSku"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="@dimen/fonSizeBig"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/name"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:autofillHints="@string/name"
        android:inputType="text"
        android:textSize="@dimen/fonSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextSku" />


    <TextView

        android:id="@+id/textView4"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/unit"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toStartOf="@+id/spinnerUnit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Spinner
        android:id="@+id/spinnerUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />


    <TextView

        android:id="@+id/textView5"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toStartOf="@+id/spinnerCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbarSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/supplier"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toStartOf="@+id/spinnerSupplier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinnerSupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fonSizeBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/blue4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:backgroundTint="@color/blue7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fabSave"
        app:srcCompat="@android:drawable/ic_delete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>